# rag_bot

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  constants.py  fetch_data.py  main.py  posts.json  pyproject.toml  rag_data.py  utils.py
config/: settings.yml
