[tool.poetry]
name = "rag-bot"
version = "0.1.0"
description = ""
authors = ["vesalius512 <vladimiravramenko99@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-community = "^0.4.1"
langchain-chroma = "^1.0.0"
langchain-text-splitters = "^1.0.0"
datasets = "^4.4.1"
python-dotenv = "^1.2.1"
sentence-transformers = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
